--- a/onlineStoreF/package.json
+++ b/onlineStoreF/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
+    "ng-multiselect-dropdown": "^0.2.10",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
