--- a/onlineStoreF/package.json
+++ b/onlineStoreF/package.json
@@ -26,6 +26,8 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
     "ng-multiselect-dropdown": "^0.2.10",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^5.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
