--- a/onlineStoreF/package.json
+++ b/onlineStoreF/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
     "ng-multiselect-dropdown": "^0.2.10",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
